--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,7 +1,5 @@
 <h2>Edit Your Business</h2>
 
-<p>* Please Note: it will take 24 hours for edits to be reviewed by a moderator.</p>
-
-<p>Google Map Plugin</p>
+<small>* Please Note: it will take 24 hours for edits to be reviewed by a moderator.</small>
 
 <%= render partial: 'form', locals: { business: @business, verb: "Edit" } %>
