--- a/app/views/layouts/backbone.html.erb
+++ b/app/views/layouts/backbone.html.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>YelpLite</title>
+
+  <!-- MAPBOX -->
+  <%= stylesheet_link_tag 'https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' %>
+  <%= javascript_include_tag 'https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js' %>
+
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
