--- a/app/views/reviews/_delete.html.erb
+++ b/app/views/reviews/_delete.html.erb
@@ -1,3 +1,3 @@
 <div class="review-remove">
-  <%= button_to "Remove Review", delete_review_url(review), method: :get %>
+  <%= button_to "Remove Review", delete_review_url(review), method: :get, class: "review-remove-button" %>
 </div>
