--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   </div>
 
-  <% if @results.length > 0 %>
+  <% if @results && @results.length > 0 %>
     <div class="search-results">
       <% @results.each do |result| %>
         <%= render result %>
